# eval_localmodel

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
config/: compare_example.yaml  compare_qwen25_05b.yaml  compare_qwen25_15b.yaml  models.yaml
doc/: test_cases.md
scripts/: download_models.ps1  download_models.sh  run_eval.ps1  run_eval.sh  setup.ps1  setup.sh
src/: cli.py  models.py
src/eval/: matchers.py  results.py  runner.py
src/eval_localmodel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/reporting/: console.py  html.py
src/runtimes/: base.py  foundry_rt.py  llamacpp_rt.py  ollama_rt.py  parsing.py  registry.py
src/test_suites/: __init__.py
src/test_suites/data/: multi_tool.json  negative.json  simple_single.json  tool_selection.json
